--- a/views/api-key.ejs
+++ b/views/api-key.ejs
@@ -2,6 +2,6 @@
   <%- include ("./partials/sidebar", {active: "api"}); %>
   <section>
     <h4>Api key</h4>
-    <code>your api key: <%= user.id %></code>
+    <p>your api key: <code><%= user.id %></code></p>
   </section>
 </section>
