--- a/views/docs.ejs
+++ b/views/docs.ejs
@@ -1,8 +1,21 @@
 <div class="docs">
   <section>
+    <h1>Getting started</h1>
+    <p>
+      Please, use your <a href="/user/api-key" class="docs__link">API Key</a> in
+      every API call you make. Our platform only processes the API requests with
+      an API key included. The API key linked to your account is used to take
+      count of the calls you make to FunFacts platform. We reset the count every
+      day.
+    </p>
+  </section>
+
+  <hr />
+
+  <section>
     <h1>Get all facts</h1>
 
-    <p>If you want to get all the facts you can.</p>
+    <p>Get all facts or query for a specific topic and/or language.</p>
 
     <div class="parameters">
       <table>
@@ -22,7 +35,7 @@
           </tr>
           <tr>
             <td><code>Category</code></td>
-            <td><span class="sub">optional</span></td>
+            <td>optional</td>
             <td>
               <p>
                 You can use the category parameter to get the facts about that
@@ -34,11 +47,14 @@
       </table>
     </div>
 
-    <div class="api-example">
-      <h4>Api call example</h4>
-      <code
-        >https://<%= url %>/api/all?category=boat&apiToken=
-        <a href="/user"> {your_api_key} </a>
+    <div>
+      <h4>API call example</h4>
+      <code class="example"
+        >https://<%= url %>/api/all?category=boat&apiToken=<a
+          href="/user/api-key"
+          class="docs__link"
+          >{your_api_key}
+        </a>
       </code>
     </div>
   </section>
@@ -50,7 +66,6 @@
 
     <p>If you want to get a specific fact.</p>
 
-    <!-- <div class="parameters"> -->
     <table>
       <tbody>
         <tr>
@@ -58,7 +73,7 @@
         </tr>
         <tr>
           <td><code>id</code></td>
-          <td><span class="sub">required</span></td>
+          <td>required</td>
           <td>
             <p>
               You can use the lang parameter to get the output in your language.
@@ -67,10 +82,16 @@
         </tr>
       </tbody>
     </table>
-    <!-- </div> -->
-    <div class="api-example">
-      <h4>Api call example</h4>
-      <code>https://<%= url %>/api/all</code>
+
+    <div>
+      <h4>API call example</h4>
+      <code class="example"
+        >https://<%= url %>/api/fact?factId=60d79724fab161223c6dabcf&apiToken=<a
+          href="/user/api-key"
+          class="docs__link"
+          >{your_api_key}
+        </a>
+      </code>
     </div>
   </section>
 
