--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,36 @@
 <section class="hero">
   <div class="hero__content">
     <h1>Fun facts</h1>
-    <p>Discovery wonderful facts with this api.</p>
-    <a class="btn" href="#">Get started</a>
+    <p>Discovery wonderful things every time you call the api.</p>
+    <a class="btn" href="/docs">Get started</a>
   </div>
   <div>
-    <img src="hero.png" alt="test" style="max-width: 35vw; min-width: 10vw" />
+    <img src="hero.svg" alt="test" style="max-width: 35vw; min-width: 10vw" />
   </div>
+</section>
+
+<section class="why">
+  <h2>Why FUN FACTS api?</h2>
+
+  <div class="why__details">
+    <div>
+      <img src="easy-to-use.png" alt="easy" />
+      <h3>EASY</h3>
+      <p>Easy to use! learn how to use in only a few minutes.</p>
+    </div>
+    <div>
+      <img src="fast.png" alt="fast" />
+      <h3>FAST ⚡</h3>
+      <p>learn wonderful things very fast with this api.</p>
+    </div>
+    <div>
+      <img src="reliable.png" alt="" />
+      <h3>RELIABLE 🤝</h3>
+      <p>All the facts are checked! learn only the truth.</p>
+    </div>
+  </div>
+</section>
+
+<section class="fact">
+  <h2>"<%= fact %>"</h2>
 </section>
