--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,136 +14,87 @@
     <title>Members</title>
   </head>
   <body>
-    <div class="signin-signup">
-      <section class="login">
-        <div id="login-section">
+    <div class="container" id="container">
+      <div class="form form-container sign-up-container">
+        <form action="/register" method="POST">
+          <h1>Create Account</h1>
+          <input
+            type="email"
+            name="email"
+            placeholder="Email"
+            autocomplete="off"
+          />
+          <input
+            type="text"
+            name="name"
+            placeholder="Name"
+            autocomplete="off"
+          />
+          <input
+            type="password"
+            name="password"
+            placeholder="Password"
+            autocomplete="off"
+          />
+
+          <% if (openTab === 'register') { %>
+          <div><%- include ("./partials/register-messages"); %></div>
+          <% } %>
+
+          <button class="btn">Sign Up</button>
+          <p class="auth">have an account? <a href="/login">Sign in</a></p>
+        </form>
+      </div>
+      <div class="form form-container sign-in-container">
+        <form action="/login" method="POST">
           <h1>Sign in</h1>
-          <form action="/login" method="post">
-            <input
-              type="email"
-              name="email"
-              placeholder="Email"
-              autocomplete="off"
-            />
-            <input type="password" name="password" placeholder="Password" />
-            <a href="" class="forgot-password">Forgot your password?</a>
-            <button class="btn">Sign in</button>
-            <%- include ("./partials/messages"); %>
-          </form>
-          <p>Don't have an account? <a href="/register">Sign Up</a></p>
+          <input
+            type="email"
+            name="email"
+            placeholder="Email"
+            autocomplete="off"
+          />
+          <input
+            type="password"
+            name="password"
+            placeholder="Password"
+            autocomplete="off"
+          />
+
+          <% if (openTab === 'login') { %>
+          <div><%- include ("./partials/login-messages"); %></div>
+          <% } %>
+
+          <button class="btn">Sign In</button>
+
+          <p class="auth">
+            Don't have an account? <a href="/register">Sign Up</a>
+          </p>
+        </form>
+      </div>
+      <div class="overlay-container">
+        <div class="overlay">
+          <div class="overlay-panel overlay-left">
+            <h1>Welcome Back!</h1>
+            <p class="text">
+              To keep connected with us please login with your personal info
+            </p>
+            <button class="ghost" id="signIn">Sign In</button>
+          </div>
+          <div class="overlay-panel overlay-right">
+            <h1>Hello, Friend!</h1>
+            <p class="text">
+              Enter your personal details and start journey with us
+            </p>
+            <button class="ghost" id="signUp">Sign Up</button>
+          </div>
         </div>
-
-        <div id="register-section" style="display: none">
-          <h1>Sign Up</h1>
-          <form action="/register" method="post" id="register-form">
-            <input
-              type="email"
-              name="email"
-              placeholder="Email"
-              autocomplete="off"
-              value="<%= typeof name != 'undefined' ? name : '' %>"
-            />
-            <input
-              type="text"
-              name="name"
-              placeholder="Name"
-              autocomplete="off"
-              value="<%= typeof email != 'undefined' ? email : '' %>"
-            />
-            <input type="password" name="password" placeholder="Password" />
-            <%- include ("./partials/messages"); %>
-
-            <button class="btn">Sign up</button>
-          </form>
-
-          <p>have an account? <a href="/login">Sign in</a></p>
-        </div>
-      </section>
-
-      <section class="side" id="side">
-        <div class="side__content" id="register-content">
-          <h3>Welcome back!</h3>
-          <p>To keep connected with us please login with your personal info</p>
-          <button id="sign-up">Sign Up</button>
-        </div>
-
-        <div class="side__content" id="login-content">
-          <h3>Hello, Friend!</h3>
-          <p>Enter your personal details and start journey with us</p>
-          <button id="sign-in">Sign In</button>
-        </div>
-      </section>
+      </div>
     </div>
 
-    <!-- <script src="/js/main.js"></script> -->
-
     <script>
-      const signInBtn = document.getElementById("sign-in");
-      const signUpBtn = document.getElementById("sign-up");
-      const side = document.getElementById("side");
-      const loginContent = document.getElementById("login-content");
-      const registerContent = document.getElementById("register-content");
-
       const open = "<%= openTab %>";
-
-      signInBtn.addEventListener("click", () => {
-        changeFormPosition(false);
-        changeContent("register");
-        side.classList.remove("sign-in");
-        setTimeout(() => showForm(true), 300);
-      });
-
-      signUpBtn.addEventListener("click", () => {
-        changeFormPosition(true);
-        changeContent("login");
-        side.classList.add("sign-in");
-        setTimeout(() => showForm(false), 300);
-      });
-
-      const changeContent = (activePage) => {
-        if (activePage === "login") {
-          registerContent.style.display = "none";
-          loginContent.style.display = "block";
-        } else {
-          loginContent.style.display = "none";
-          registerContent.style.display = "block";
-        }
-      };
-
-      const showForm = (isLoginPageActive) => {
-        const registerSection = document.getElementById("register-section");
-        const loginSection = document.getElementById("login-section");
-
-        if (isLoginPageActive) {
-          loginSection.style.display = "block";
-          registerSection.style.display = "none";
-        } else {
-          registerSection.style.display = "block";
-          loginSection.style.display = "none";
-        }
-      };
-
-      const changeFormPosition = (isLoginPageActive) => {
-        const login = document.querySelector(".login");
-
-        if (isLoginPageActive) {
-          login.classList.add("register");
-        } else {
-          login.classList.remove("register");
-        }
-      };
-
-      if (open === "login") {
-        changeFormPosition(false);
-        changeContent("register");
-        side.classList.remove("sign-in");
-        showForm(true);
-      } else {
-        changeFormPosition(true);
-        changeContent("login");
-        side.classList.add("sign-in");
-        showForm(false);
-      }
     </script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
