--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -1,6 +1,6 @@
 <% if(locals.errors) { %>
     <% errors.forEach(function(error) { %>
-        <div class="alert" role="alert">
+        <div class="alert error-msg" role="alert">
             <%= error.msg %>
         </div>
     <% }); %>
@@ -13,13 +13,13 @@
 <% } %>
 
 <% if(error_msg != '') { %>
-    <div class="alert" role="alert">
+    <div class="alert error-msg" role="alert">
         <%= error_msg %>
     </div>
 <% } %>
 
 <% if(error != '') { %>
-    <div class="alert" role="alert">
+    <div class="alert error-msg" role="alert">
         <%= error %>
     </div>
 <% } %>
